--- a/main/templates/countries_page.html
+++ b/main/templates/countries_page.html
@@ -20,12 +20,31 @@
         {% for group in general_info_groups %}
             <div class="general-info">
                 <div class="category-header">{{ group.category }}</div>
-                {% for field, value, icon in group.items %}
+                {% for field, value, icon, prefix, suffix in group.items %}
                     <div class="info-item">
                         <div class="icon">{{ icon }}</div>
                         <div class="text">
-                            <div class="label">{{ field }}</div>
-                            <div class="value">{{ value }}</div>
+                            <!-- {% if group.category == "Agriculture" %}
+                                <div class="label">{{ field }}</div>
+                                <div class="value">{{ value }}%</div>
+                            {% else %}
+                                {% if field == "Area" %}
+                                    <div class="label">{{ field }}</div>
+                                    <div class="value">{{ value }} mi²</div>
+                                {% elif field == "Population" %}
+                                    <div class="label">{{ field }}</div>
+                                    <div class="value">{{ value }} mi²</div>
+                                {% else %}
+                                    <div class="label">{{ field }}</div>
+                                    <div class="value">{{ value }}</div>
+                                {% endif %}
+                            {% endif %} -->
+                            <!-- {% if not value %}
+                                <div class="label">{{ field }}</div>
+                            {% else %} -->
+                                <div class="label">{{ field }}</div>
+                                <div class="value">{{ prefix }}{{ value }} {{ suffix }}</div>
+                            <!-- {% endif %} -->
                         </div>
                     </div>
                 {% endfor %}
